# worldMonitor

./: index.html  inoreader-articles-snap.md  inoreader-snapshot-nav.md  package-lock.json  package.json  v2.html  vite.config.ts
server-py/: .gitignore  bench_embed.py  pyproject.toml  test.db  worldmonitor.db  worldmonitor.db-shm  worldmonitor.db-wal
server-py/alembic/: env.py
server-py/alembic/versions/: 93cfc8e97e66_initial_schema.py  b3aa692c4d1c_add_ai_feeds_tables.py
server-py/app/: config.py  db.py  gateway.py  main.py
server-py/app/auth/: deps.py  router.py  schemas.py  service.py
server-py/app/automation/: reports_model.py  reports_router.py
server-py/app/dashboards/: router.py  schemas.py  service.py
server-py/app/models/: __init__.py  ai_feed.py  article.py  article_model.py  case.py  dashboard.py  folder.py  intel_category.py  intel_model.py  job.py  org.py  org_secret.py  source_template.py  spotlight.py  user.py  user_article.py
server-py/app/notifications/: digests.py  digests_router.py  dispatcher.py  models.py  router.py
server-py/app/plugins/: __init__.py  base.py  models.py  registry.py  router.py  scheduler.py  schemas.py
server-py/app/rules_engine/: dedup.py  evaluator.py  executor.py  models.py  router.py  runner.py
server-py/app/source_engine/: article_enricher.py  article_pipeline.py  cache.py  catalog_ingest.py  (+17 more)
server-py/data/: category-analysis.json
server-py/scripts/: gen_section_descriptions.py  test_gemma_classify.py
server-py/tests/: conftest.py  test_auth.py  test_dashboards.py  test_domains.py  test_parser.py
(+184 files in other folders)
